--- a/InitiativesPlus.ClientApp/package.json
+++ b/InitiativesPlus.ClientApp/package.json
@@ -11,22 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.11",
-    "@angular/common": "~10.0.11",
-    "@angular/compiler": "~10.0.11",
-    "@angular/core": "~10.0.11",
-    "@angular/forms": "~10.0.11",
-    "@angular/platform-browser": "~10.0.11",
-    "@angular/platform-browser-dynamic": "~10.0.11",
-    "@angular/router": "~10.0.11",
+    "@angular/animations": "~10.0.14",
+    "@angular/cdk": "^10.2.0",
+    "@angular/common": "~10.0.14",
+    "@angular/compiler": "~10.0.14",
+    "@angular/core": "~10.0.14",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "~10.0.14",
+    "@angular/material": "^10.2.0",
+    "@angular/platform-browser": "~10.0.14",
+    "@angular/platform-browser-dynamic": "~10.0.14",
+    "@angular/router": "~10.0.14",
+    "highcharts": "^8.2.0",
+    "highcharts-angular": "^2.8.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.7",
-    "@angular/cli": "~10.0.7",
-    "@angular/compiler-cli": "~10.0.11",
+    "@angular-devkit/build-angular": "~0.1000.8",
+    "@angular/cli": "~10.0.8",
+    "@angular/compiler-cli": "~10.0.14",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
