--- a/InitiativesPlus.Presentation/appsettings.json
+++ b/InitiativesPlus.Presentation/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=NISHANW;Database=InitiativesPlus;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "AppSettings": {
+    "Token": "secret key for jwt"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
