api -email service and other related modifications

--- a/InitiativesPlus.Infrastructure.EmailService/appsettings.json
+++ b/InitiativesPlus.Infrastructure.EmailService/appsettings.json
@@ -4,6 +4,11 @@
     "TopicName": "role-change",
     "SubscriptionName": "role"
   },
+  "MailGunConfigSection": {
+    "from": "initiativesplus@99x.io",
+    "mailgunKey": "490a3b6d0cc30ab5953255c7d8998d88-d5e69b0b-a7ad8bc4",
+    "domain": "sandboxc26131879edf40c7a52238a16310cc1e.mailgun.org"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
