--- a/InitiativesPlus.ClientApp/package.json
+++ b/InitiativesPlus.ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.0.14",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
+    "ng-http-loader": "^8.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
