--- a/InitiativesPlus.Infrastructure.EmailService/InitiativesPlus.Infrastructure.EmailService.csproj
+++ b/InitiativesPlus.Infrastructure.EmailService/InitiativesPlus.Infrastructure.EmailService.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
   </ItemGroup>
 
 </Project>
