api - added migrations on startup

--- a/InitiativesPlus.Presentation/appsettings.json
+++ b/InitiativesPlus.Presentation/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NISHANW;Database=InitiativesPlus;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=NISHANW;Database=InitiativesPlus;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureConnection": "Server=tcp:constructionlk.database.windows.net,1433;Database=CONSTRUCTIONLK;User Id=adminuser;Password=Admin123;Trusted_Connection=False;MultipleActiveResultSets=true"
   },
   "AppSettings": {
     "Token": "secret key for jwt"
