--- a/InitiativesPlus.ClientApp/package.json
+++ b/InitiativesPlus.ClientApp/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@auth0/angular-jwt": "^5.0.1",
+    "angular2-jwt": "^0.2.3",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
     "ng-http-loader": "^8.0.0",
+    "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
