--- a/InitiativesPlus.ClientApp/package.json
+++ b/InitiativesPlus.ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@auth0/angular-jwt": "^5.0.1",
+    "alertifyjs": "^1.13.1",
     "angular2-jwt": "^0.2.3",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
