--- a/InitiativesPlus.ClientApp/package.json
+++ b/InitiativesPlus.ClientApp/package.json
@@ -24,13 +24,20 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@auth0/angular-jwt": "^5.0.1",
+    "@types/datatables.net": "^1.10.19",
+    "@types/jquery": "^3.5.1",
     "alertifyjs": "^1.13.1",
+    "angular-datatables": "^9.0.2",
     "angular2-jwt": "^0.2.3",
+    "datatables.net": "^1.10.22",
+    "datatables.net-dt": "^1.10.22",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
+    "jquery": "^3.5.1",
     "ng-http-loader": "^8.0.0",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
