--- a/InitiativesPlus.Infrastructure.Data/InitiativesPlus.Infrastructure.Data.csproj
+++ b/InitiativesPlus.Infrastructure.Data/InitiativesPlus.Infrastructure.Data.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.13.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
